--- a/testweb/pom.xml
+++ b/testweb/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>testweb</groupId>
 	<artifactId>testweb</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>testweb</name>
 	<description />
@@ -11,8 +11,8 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!-- 部署web应用到Tomcat下的插件,并设置Tomcat启动端口与访问路径 -->
-				<plugin>
+				<!-- Method 1 mojo 部署web应用到Tomcat下的插件,并设置Tomcat启动端口与访问路径 -->
+			 	<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>tomcat-maven-plugin</artifactId>
 					<version>1.1</version>
@@ -22,6 +22,28 @@
 						<uriEncoding>utf-8</uriEncoding>
 					</configuration>
 				</plugin>
+
+				<!-- Method 2 cargo -->
+				<!-- <plugin>
+					<groupId>org.codehaus.cargo</groupId>
+					<artifactId>cargo-maven2-plugin</artifactId>
+					<version>1.4.9</version>
+					<configuration>
+						<container>
+							<containerId>tomcat6x</containerId>
+							<home>D:\DevProgram\apache-tomcat-6.0.44</home>
+						</container>
+						<configuration>
+							<type>standalone</type>
+							<home>${project.build.directory}/tomcat6x</home>
+							<properties>
+								<cargo.servlet.port>9090</cargo.servlet.port>
+								<cargo.jvmargs>-Dfile.encoding=UTF-8</cargo.jvmargs> 
+							</properties>
+						</configuration>
+					</configuration>
+				</plugin> -->
+				
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
@@ -65,11 +87,41 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+	<profiles>
+		<!-- 开发环境 -->
+		<profile>
+			<id>development</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<pfile>development.properties</pfile>
+			</properties>
+		</profile>
+		<!-- 测试环境 -->
+		<profile>
+			<id>test</id>
+			<properties>
+				<pfile>test.properties</pfile>
+			</properties>
+		</profile>
+		<!-- 生产环境 -->
+		<profile>
+			<id>online</id>
+			<properties>
+				<pfile>online.properties</pfile>
+			</properties>
+		</profile>
+	</profiles>
 
 
 	<dependencies>
-
-
+		<dependency>
+		  <groupId>org.apache.onami.logging</groupId>
+		  <artifactId>org.apache.onami.logging.juli</artifactId>
+		  <version>3.4.0-incubating</version>
+		</dependency>
 
 		<!-- Junit -->
 		<dependency>
