--- a/test-web/pom.xml
+++ b/test-web/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>testweb</groupId>
-	<artifactId>testweb</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<groupId>com.puck.test</groupId>
+	<artifactId>test-web</artifactId>
+	<version>1.0</version>
 	<packaging>war</packaging>
-	<name>testweb</name>
+	<name>test-web</name>
 	<description />
 
 	<build>
