--- a/test-web/pom.xml
+++ b/test-web/pom.xml
@@ -9,6 +9,15 @@
 	<description />
 
 	<build>
+		<filters>
+			<filter>${pfile}</filter>
+		</filters>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<pluginManagement>
 			<plugins>
 				<!-- Method 1 mojo 部署web应用到Tomcat下的插件,并设置Tomcat启动端口与访问路径 -->
@@ -155,10 +164,10 @@
 			<version>1.3.1</version>
 		</dependency>
 		<dependency>
-  <groupId>jstl</groupId>
-  <artifactId>jstl</artifactId>
-  <version>1.2</version>
-</dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<!-- spring start -->
 		<dependency>
 			<groupId>org.springframework</groupId>
