--- a/test-web/pom.xml
+++ b/test-web/pom.xml
@@ -128,7 +128,11 @@
 
 
 	<dependencies>
-	
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>19.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
