--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 					<version>2.3</version> <configuration> <warSourceDirectory>${basedir}/webapp</warSourceDirectory>
 					<version>3.0</version> <failOnMissingWebXml>false</failOnMissingWebXml> </configuration>
 					</plugin> -->
-				<plugin>
+			<!-- 	<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>2.5.1</version>
@@ -75,7 +75,7 @@
 						<target>1.7</target>
 						<encoding>UTF-8</encoding>
 					</configuration>
-				</plugin>
+				</plugin> -->
 				<!-- <plugin> <groupId>org.apache.tomcat.maven</groupId> <artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.1</version> <configuration> <path>/puckblog</path> <port>9090</port>
 					<uriEncoding>UTF-8</uriEncoding> <url>http://localhost:9090/puckblog/index.jsp</url>
@@ -128,10 +128,15 @@
 
 
 	<dependencies>
+<!-- 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-actuator</artifactId>
+		    <version>1.5.8.RELEASE</version>
+		</dependency> -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>19.0</version>
+			<version>23.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
