--- a/pom.xml
+++ b/pom.xml
@@ -8,89 +8,6 @@
 	<name>test-web</name>
 	<description />
 
-	<build>
-		<filters>
-			<filter>src/main/resources/${env}.properties</filter>
-		</filters>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<pluginManagement>
-			<plugins>
-				<!-- Method 1 mojo 部署web应用到Tomcat下的插件,并设置Tomcat启动端口与访问路径 -->
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>tomcat-maven-plugin</artifactId>
-					<version>1.1</version>
-					<configuration>
-						<port>9090</port>
-						<path>/</path>
-						<uriEncoding>utf-8</uriEncoding>
-					</configuration>
-				</plugin>
-
-				<!-- Method 2 cargo -->
-				<!-- <plugin>
-					<groupId>org.codehaus.cargo</groupId>
-					<artifactId>cargo-maven2-plugin</artifactId>
-					<version>1.4.9</version>
-					<configuration>
-						<container>
-							<containerId>tomcat6x</containerId>
-							<home>D:\DevProgram\apache-tomcat-6.0.44</home>
-						</container>
-						<configuration>
-							<type>standalone</type>
-							<home>${project.build.directory}/tomcat6x</home>
-							<properties>
-								<cargo.servlet.port>9090</cargo.servlet.port>
-								<cargo.jvmargs>-Dfile.encoding=UTF-8</cargo.jvmargs>
-							</properties>
-						</configuration>
-					</configuration>
-				</plugin> -->
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.6</version>
-					<configuration>
-						<encoding>utf-8</encoding>
-					</configuration>
-				</plugin>
-
-				<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-war-plugin</artifactId>
-					<version>2.3</version> <configuration> <warSourceDirectory>${basedir}/webapp</warSourceDirectory>
-					<version>3.0</version> <failOnMissingWebXml>false</failOnMissingWebXml> </configuration>
-					</plugin> -->
-			<!-- 	<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.5.1</version>
-					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
-						<encoding>UTF-8</encoding>
-					</configuration>
-				</plugin> -->
-				<!-- <plugin> <groupId>org.apache.tomcat.maven</groupId> <artifactId>tomcat7-maven-plugin</artifactId>
-					<version>2.1</version> <configuration> <path>/puckblog</path> <port>9090</port>
-					<uriEncoding>UTF-8</uriEncoding> <url>http://localhost:9090/puckblog/index.jsp</url>
-					<server>tomcat7</server> </configuration> </plugin> -->
-				<!-- 配置构建时忽略测试用例 -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-						<skipTests>true</skipTests>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
 
 
 	<properties>
@@ -128,11 +45,18 @@
 
 
 	<dependencies>
-<!-- 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-actuator</artifactId>
-		    <version>1.5.8.RELEASE</version>
-		</dependency> -->
+		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+		<!--<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.25-incubating</version>
+		</dependency>-->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.23</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
@@ -482,4 +406,50 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<filters>
+			<filter>src/main/resources/${env}.properties</filter>
+		</filters>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<pluginManagement>
+			<plugins>
+				<!-- Method 1 mojo 部署web应用到Tomcat下的插件,并设置Tomcat启动端口与访问路径 -->
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>tomcat-maven-plugin</artifactId>
+					<version>1.1</version>
+					<configuration>
+						<port>9090</port>
+						<path>/</path>
+						<uriEncoding>utf-8</uriEncoding>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.6</version>
+					<configuration>
+						<encoding>utf-8</encoding>
+					</configuration>
+				</plugin>
+
+				<!-- 配置构建时忽略测试用例 -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<skipTests>true</skipTests>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 </project>
