--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.version>1.7</jdk.version>
+		<jdk.version>1.8</jdk.version>
 		<spring.version>4.2.4.RELEASE</spring.version>
 	</properties>
 
@@ -121,11 +121,6 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<!-- 		<dependency>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-asm</artifactId>
-                    <version>${spring.version}</version>
-                </dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
@@ -189,12 +184,12 @@
 		</dependency>
 
 		<!-- LOG4J -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.4</version>
-		</dependency>
-		<dependency>
+			<version>1.7.25</version>
+		</dependency>-->
+		<!--<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.4</version>
@@ -203,6 +198,12 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>-->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Mybatis -->
@@ -368,12 +369,6 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.weld</groupId>
-			<artifactId>weld-osgi-bundle</artifactId>
-			<version>1.0.1-SP3</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
@@ -412,8 +407,11 @@
 	</dependencies>
 
 	<build>
-		<filters>
+		<!--<filters>
 			<filter>src/main/resources/${env}.properties</filter>
+		</filters>-->
+		<filters>
+			<filter>${pfile}</filter>
 		</filters>
 		<resources>
 			<resource>
@@ -425,11 +423,11 @@
 			<plugins>
 				<!-- Method 1 mojo 部署web应用到Tomcat下的插件,并设置Tomcat启动端口与访问路径 -->
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>tomcat-maven-plugin</artifactId>
-					<version>1.1</version>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.2</version>
 					<configuration>
-						<port>9090</port>
+						<port>8080</port>
 						<path>/</path>
 						<uriEncoding>utf-8</uriEncoding>
 					</configuration>
