--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
 
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.auto.service</groupId>
+			<artifactId>auto-service</artifactId>
+			<version>1.0-rc2</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
-		<!--<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-			<version>2.3.25-incubating</version>
-		</dependency>-->
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
@@ -456,6 +456,17 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
 						<skipTests>true</skipTests>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.2</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
 			</plugins>
