--- a/development.yml
+++ b/development.yml
@@ -1,15 +1,15 @@
-domain.name=test-web.com
-server.port=80
-##mysql
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:MySql://192.168.8.240:3306/test?characterEncoding=UTF-8&amp;autoReconnect=true&amp;failOverReadOnly=false
-jdbc.username=dev
-jdbc.password=111111
-jdbc.filters=slf4j
-jdbc.maxActive=20
-jdbc.initialSize=1
-jdbc.maxWait=60000
-jdbc.minIdle=10
+#domain.name=test-web.com
+#server.port=80
+###mysql
+#jdbc.driverClass=com.mysql.jdbc.Driver
+#jdbc.jdbcUrl=jdbc:MySql://192.168.8.240:3306/test?characterEncoding=UTF-8&amp;autoReconnect=true&amp;failOverReadOnly=false
+#jdbc.username=dev
+#jdbc.password=111111
+#jdbc.filters=slf4j
+#jdbc.maxActive=20
+#jdbc.initialSize=1
+#jdbc.maxWait=60000
+#jdbc.minIdle=10
 
 # DataSource Config
 spring:
@@ -18,21 +18,15 @@ spring:
     url: jjdbc:MySql://localhost:3306/test?characterEncoding=UTF-8&amp;autoReconnect=true&amp;failOverReadOnly=false
     username: root
     password: 9999
+    type: com.alibaba.druid.pool.DruidDataSource
 
 ##redis
-redis.ip=192.168.8.241
-#redis.ip=192.168.8.64
-redis.port=6379
-redis.defaultExpireTime = 1800
-redis.useCache=true
-## \u65e5\u5fd7
-log.level=info
-dynamic.log.path=/web/domains/${domain.name}/logs/
-## \u6253\u5305\u7f16\u7801
+#redis.ip=192.168.8.241
+#redis.port=6379
+#redis.defaultExpireTime = 1800
+#redis.useCache=true
+
+log.level: info
 project.build.sourceEncoding=UTF-8
 
-cookie.aes.key=i0380w330bwda14m
-
-job.autoStartup=true
-devMode=true
 
