--- a/pom.xml
+++ b/pom.xml
@@ -214,22 +214,27 @@
 		</dependency>
 
 		<!-- Mybatis -->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.2.1</version>
+			<version>3.4.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>1.2.0</version>
-		</dependency>-->
+			<version>1.3.2</version>
+		</dependency>
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus</artifactId>
 			<version>3.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.14</version>
+		</dependency>
 		<!-- mysql connector -->
 		<dependency>
 			<groupId>mysql</groupId>
