--- a/test.properties
+++ b/test.properties
@@ -12,12 +12,12 @@ jdbc.maxWait=60000
 jdbc.minIdle=10
 
 # DataSource Config
-spring:
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jjdbc:MySql://localhost:3306/test?characterEncoding=UTF-8&amp;autoReconnect=true&amp;failOverReadOnly=false
-    username: root
-    password: 9999
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.jdbc.Driver
+#    url: jjdbc:MySql://localhost:3306/test?characterEncoding=UTF-8&amp;autoReconnect=true&amp;failOverReadOnly=false
+#    username: root
+#    password: 9999
 
 ##redis
 redis.ip=192.168.8.241
@@ -25,14 +25,8 @@ redis.ip=192.168.8.241
 redis.port=6379
 redis.defaultExpireTime = 1800
 redis.useCache=true
+
 ## \u65e5\u5fd7
 log.level=info
-dynamic.log.path=/web/domains/${domain.name}/logs/
-## \u6253\u5305\u7f16\u7801
-project.build.sourceEncoding=UTF-8
 
-cookie.aes.key=i0380w330bwda14m
-
-job.autoStartup=true
-devMode=true
 
