--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.version>1.8</jdk.version>
 		<spring.version>4.2.4.RELEASE</spring.version>
+		<orika.version>1.5.4</orika.version>
 		<env>${pfile}</env>
 	</properties>
 
@@ -274,6 +275,11 @@
 			<version>2.7.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>ma.glasnost.orika</groupId>
+			<artifactId>orika-core</artifactId>
+			<version>${orika.version}</version>
+		</dependency>
 		<!-- Mybatis -->
 		<!--<dependency>-->
 			<!--<groupId>org.mybatis</groupId>-->
