--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
 		<!-- spring start -->
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
@@ -219,7 +224,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.5</version>
+			<version>4.9</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -276,6 +281,7 @@
 		</dependency>
 
 		<dependency>
+			<!-- bean copy 工具 -->
 			<groupId>ma.glasnost.orika</groupId>
 			<artifactId>orika-core</artifactId>
 			<version>${orika.version}</version>
